BigDecimal for Number comparison